JDK21 Update and code reformat for java standard 21