@@ -11,6 +11,8 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -19,7 +21,6 @@ import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public final class IDReleaseManager {
 
@@ -27,7 +28,7 @@ public final class IDReleaseManager {
     @Nullable
     public static ArrayList<@NotNull IDRelease> getIDReleases(@NotNull final String repositoryName) {
         try {
-            URL url = new URL("https://api.github.com/repos/ItalianDudes/" + repositoryName + "/releases");
+            URL url = new URI("https://api.github.com/repos/ItalianDudes/" + repositoryName + "/releases").toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             connection.setRequestProperty("Accept", "application/json");
@@ -47,13 +48,13 @@ public final class IDReleaseManager {
             } finally {
                 connection.disconnect();
             }
-        } catch (IOException | JSONException e) {
+        } catch (IOException | JSONException | URISyntaxException e) {
             Logger.log(e);
             return null;
         }
     }
-    public static void downloadRelease(@NotNull final IDRelease release, @NotNull File dest) throws IOException {
-        URL url = new URL(release.getDownloadLink());
+    public static void downloadRelease(@NotNull final IDRelease release, @NotNull File dest) throws IOException, URISyntaxException {
+        URL url = new URI(release.getDownloadLink()).toURL();
         InputStream is = url.openConnection().getInputStream();
         String releaseDestination = dest.getAbsolutePath() + File.separator + release.getVersion() + File.separator + release.getFilename();
         if (!new File(releaseDestination).mkdirs()) {
@@ -65,7 +66,7 @@ public final class IDReleaseManager {
     @Nullable
     public static IDRelease getLatestReleaseFromRepositoryReleases(@NotNull final ArrayList<@NotNull IDRelease> releases, @NotNull final ReleaseType releaseType) {
         if (releases.isEmpty()) return null;
-        List<IDRelease> allowedReleases = releases.stream().filter(release -> release.getReleaseType().ordinal() <= releaseType.ordinal()).sorted().collect(Collectors.toList());
-        return allowedReleases.isEmpty()?null:allowedReleases.get(allowedReleases.size()-1);
+        List<IDRelease> allowedReleases = releases.stream().filter(release -> release.getReleaseType().ordinal() <= releaseType.ordinal()).sorted().toList();
+        return allowedReleases.isEmpty()?null:allowedReleases.getLast();
     }
 }
